--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ define('REDTRACK_CAMPAIGN_ID', '6659024a4fd7be00010b39ba');
                                 <div class="col-12 col-sm-5">
                                     <div class="d-flex align-items-center gap-3 gap-xl-5">
                                         <div class="item-logo brand-logo">
-                                            <img src="./images/merkur1.png" alt="" loading="lazy" title="slots" width="155" height="85" class="rounded-2">
+                                            <img src="./images/eu1.png" alt="" loading="lazy" title="slots" width="155" height="85" class="rounded-2">
                                         </div>
                                         <div class="item-bonus text-center mx-auto /ms-md-auto">
                                             <p class="bon-txt mb-0 mt-2">100% bis zu 500€
@@ -264,11 +264,11 @@ define('REDTRACK_CAMPAIGN_ID', '6659024a4fd7be00010b39ba');
                                 <div class="item-play col-6 col-sm-2 text-center">
                                     <div class="py-2 py-md-0">
                                         <a class="btn btn-primary rounded-2 stretched-link afflink" href="https://quasidogames.com/bonus/outbound/4?clickid=66618ecbcbf32b0001065ad3&amp;rtkck=1717669579" rel="nofollow" target="_blank">Bonus Holen*</a>
-                                        <p class="getlink mb-0 d-none d-sm-block"><a href="https://quasidogames.com/bonus/outbound/4?clickid=66618ecbcbf32b0001065ad3&amp;rtkck=1717669579" rel="nofollow" target="_blank">Merkur Besuchen &gt;</a></p>
+                                        <p class="getlink mb-0 d-none d-sm-block"><a href="https://quasidogames.com/bonus/outbound/4?clickid=66618ecbcbf32b0001065ad3&amp;rtkck=1717669579" rel="nofollow" target="_blank">Euro Besuchen &gt;</a></p>
                                     </div>
                                 </div>
                             </div>
-                            <p class="text-white-50 notes small mb-0 position-relative"><b>Merkur</b> | +18 | AGB gelten</p>
+                            <p class="text-white-50 notes small mb-0 position-relative"><b>Euro</b> | +18 | AGB gelten</p>
                         </div>
 
 
@@ -277,7 +277,7 @@ define('REDTRACK_CAMPAIGN_ID', '6659024a4fd7be00010b39ba');
                                 <div class="col-12 col-sm-5">
                                     <div class="d-flex align-items-center gap-3 gap-xl-5">
                                         <div class="item-logo brand-logo">
-                                            <img src="./images/luckylord1.png" alt="" loading="lazy" title="slots" width="155" height="85" class="rounded-2">
+                                            <img src="./images/druckgluck1.png" alt="" loading="lazy" title="slots" width="155" height="85" class="rounded-2">
                                         </div>
                                         <div class="item-bonus text-center mx-auto /ms-md-auto">
                                             <p class="bon-txt mb-0 mt-2">100% bis zu 500€
@@ -302,11 +302,11 @@ define('REDTRACK_CAMPAIGN_ID', '6659024a4fd7be00010b39ba');
                                 <div class="item-play col-6 col-sm-2 text-center">
                                     <div class="py-2 py-md-0">
                                         <a class="btn btn-primary rounded-2 stretched-link afflink" href="https://quasidogames.com/bonus/outbound/5?clickid=66618ecbcbf32b0001065ad3&amp;rtkck=1717669579" rel="nofollow" target="_blank">Bonus Holen*</a>
-                                        <p class="getlink mb-0 d-none d-sm-block"><a href="https://quasidogames.com/bonus/outbound/5?clickid=66618ecbcbf32b0001065ad3&amp;rtkck=1717669579" rel="nofollow" target="_blank">LordLucky Besuchen &gt;</a></p>
+                                        <p class="getlink mb-0 d-none d-sm-block"><a href="https://quasidogames.com/bonus/outbound/5?clickid=66618ecbcbf32b0001065ad3&amp;rtkck=1717669579" rel="nofollow" target="_blank">Drückglück Besuchen &gt;</a></p>
                                     </div>
                                 </div>
                             </div>
-                            <p class="text-white-50 notes small mb-0 position-relative"><b>Luckylord</b> | +18 | AGB gelten</p>
+                            <p class="text-white-50 notes small mb-0 position-relative"><b>Drückglück</b> | +18 | AGB gelten</p>
                         </div>
 
 
